<resources>
    <string name="app_name">Pocket Doc</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="missing_number">Fill the phone number</string>
    <string name="missing_password">Enter the password</string>

    <string name="name_format">%1$s %2$s</string>
    <string name="visit_id">Вызов №%1$d</string>
    <string name="reason">Причина: %s</string>
    <string name="doctor_not_active">Доктор %d не активен</string>
    <string name="new_pills">Назначить лекарства</string>
    <string name="card">Медкарта</string>
    <string name="current_pills">Текущие лекарства</string>
    <string name="visits_history">История вызовов</string>
    <string name="finish_visit">Завершить вызов</string>
    <string name="view_visit">Просмотр вызова</string>
    <string name="current_visit">Ваш текущий вызов</string>
    <string name="visit_not_found">Вызов не найден</string>

    <plurals name="patients_number">
        <item quantity="few">%d пациента</item>
        <item quantity="many">%d пациентов</item>
    </plurals>
    <plurals name="times">
        <item quantity="one">раз</item>
        <item quantity="few">раза</item>
        <item quantity="other">раз</item>
    </plurals>

    <string name="tenge">%1$.2f ₸</string>
    <string name="visit_finish_success">Вызов успешно завершен</string>
    <string name="chronic_illnesses">Хронические заболевания</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="save">Сохранить</string>
    <string name="card_not_found">Медкарта не найдена</string>
    <string name="diagnosis">Диагноз</string>
    <string name="complaint">Жалоба</string>
    <string name="appointment">Назначение</string>
    <string name="inspection">Осмотр</string>
    <string name="result">Результат</string>
    <string name="name">Наименование</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="dose">Доза</string>
    <string name="finish_date">Дата завершения</string>
    <string name="no_pills">Пациент не принимает ни одного лекарства на данный момент</string>
    <string name="pills">Лекарства</string>
    <string name="hide">Скрыть</string>
    <string name="accept">Принять</string>
    <string name="comment_not_set">Комментарий не указан</string>
    <string name="pay_with_cash">Оплата наличными</string>
    <string name="pay_with_card">Оплата картой</string>
    <string name="visit_hidden">Этот заказ больше не будет показан</string>
    <string name="visit_accepted">Заказ одобрен</string>
    <string name="doctor">Врач</string>
    <string name="no_doctor">Не назначен</string>
    <string name="results">Результаты</string>
    <string name="empty_list">Список пуст</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="birthday">Дата рождения</string>
    <string name="gender">Пол:</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="edit">Редактировать</string>
    <string name="empty_field">Заполните поле</string>
    <string name="success_edit">Профиль успешно сохранен</string>
    <string name="image_upload_failure">Не удалось загрузить фотографию</string>

    <string-array name="tab_titles">
        <item>Текущий вызов</item>
        <item>История</item>
        <item>Профиль</item>
    </string-array>
</resources>
